# WebServerPerf

./: PROGRESS.MD  PROGRESS.md  README.md  pyproject.toml
data/: c_epoll_1000.txt  c_epoll_250.txt  c_epoll_250_1.txt  c_epoll_250_3.txt  c_epoll_500.txt  c_epoll_500_3.txt  c_epoll_750.txt  c_epoll_750_1.txt  c_epoll_750_3.txt  c_threads_1000.txt  c_threads_250.txt  c_threads_500.txt  c_threads_750.txt  rust_epoll_1000.txt  rust_epoll_1000_3.txt  rust_epoll_250.txt  rust_epoll_250_1.txt  rust_epoll_250_3.txt  rust_epoll_500.txt  rust_epoll_500_1.txt  rust_epoll_750.txt  rust_epoll_750_3.txt  rust_thread_pool_1000.txt  rust_thread_pool_250.txt  rust_thread_pool_500.txt  rust_thread_pool_750.txt  rust_threads_1000.txt  rust_threads_250.txt  rust_threads_500.txt  rust_threads_750.txt  rust_tokio_250_1.txt  rust_tokio_500_1.txt  rust_tokio_750_1.txt
data/profiles/: out_c-httpd_failing-duck.profile-folded  out_rust-tokio_failing-duck.profile-folded  out_rust.profile-folded
data/results/: out_rust.profile-folded  perf.data  perf_c.data  perf_rust.data
data/tests/: c_epoll_500_1.txt  rust_epoll_500_3.txt
data/tests/echo/: c_epoll_1000_3.txt  c_thread_pool_250_1.txt  rust_epoll_250_1.txt  rust_epoll_250_2.txt  rust_epoll_250_4.txt  rust_epoll_500_1.txt  rust_epoll_500_2.txt  rust_epoll_500_4.txt  rust_epoll_750_1.txt  rust_epoll_750_2.txt  rust_epoll_750_4.txt  rust_tokio_250_1.txt  rust_tokio_250_3.txt  rust_tokio_500_1.txt  rust_tokio_500_3.txt  rust_tokio_750_1.txt  rust_tokio_750_3.txt
data/tests/json/: c_3p_1_250_1.txt  c_3p_1_500_1.txt  c_3p_1_750_1.txt  c_3p_250_1.txt  c_3p_250_5.txt  c_3p_500_1.txt  c_3p_500_5.txt  c_3p_750_1.txt  c_3p_750_5.txt  c_httpd_250_1.txt  c_httpd_500_1.txt  c_httpd_750_1.txt  rust_3p_250_1.txt  rust_3p_250_5.txt  rust_3p_500_1.txt  rust_3p_500_5.txt  rust_3p_750_1.txt  rust_3p_750_5.txt  rust_epoll_250_1.txt  rust_epoll_250_5.txt  rust_epoll_500_1.txt  rust_epoll_500_5.txt  rust_epoll_750_5.txt  rust_tokio_250_1.txt  rust_tokio_500_1.txt  rust_tokio_750_1.txt
docker/: Dockerfile.c.server  Dockerfile.client  Dockerfile.rust.server
http-server-c/: CMakeLists.txt  README.md  vcpkg.json
http-server-c-httpd/: CMakeLists.txt  main.c  vcpkg-configuration.json  vcpkg.json
http-server-c-httpd/scripts/: compile.sh  http-server.sh
http-server-c-vanilla/: CMakeLists.txt  Makefile
http-server-c-vanilla/lib/: connection_handler.c  connection_handler.h  server.c  server.h  thread_pool.c  thread_pool.h
http-server-c-vanilla/scripts/: compile.sh  http-server.sh  run.sh
http-server-c-vanilla/src/: main.c
http-server-c/lib/: connection_handler.c  connection_handler.h  thread_pool.h
http-server-c/scripts/: compile.sh  http-server.sh
http-server-c/src/: main.c
http-server-rust-async/: Cargo.toml
http-server-rust-async/src/: main.rs
http-server-rust-tokio/: Cargo.toml
http-server-rust-tokio/src/: main.rs
http-server-rust-vanilla/: Cargo.toml
http-server-rust-vanilla/src/: connection_handler.rs  lib.rs  main.rs  server.rs  thread_pool.rs
http-server-rust/src/: main.rs  server.rs  thread_pool.rs
scripts/: FIGURE_OUT.md  collect_median.py  compare_concurrency.sh  compare_concurrency_echo.sh  compare_concurrency_json.sh  drill.yml  gen_flamegraph.sh  payload.json  perf.data  plot_comparison.py  post.lua  start_http_server_rust_vanilla.md  start_http_server_rust_vanilla.sh  start_trace.sh  test.sh
